examples/kju/negative/arrays/wrong_type_new_ay.kju
fun kju(): Unit
{
	var ay: [Bool] = new(Int,5);
}
